2003-09-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Scripts): Update the example about automake.
	Mention `dist_' for distributed scripts.

	* lib/mkinstalldirs: Clean up after NextStep and OpenStep mkdir.
	Suggested by Eric Sunshine.

2003-09-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* README: More mailing lists.

	* NEWS: Mention the switch to GNU FDL for the manual.

2003-09-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/install-sh (src, dst): Protect names starting with `-',
	as in mkinstalldirs.

	* configure.in: Rename as ...
	* configure.ac: ... this.
	* README: s/configure.in/configure.ac/.

	* doc/fdl.texi: New file.
	* doc/Makefile.am (automake_TEXINFOS): New variable.
	* doc/automake.texi (Copying This Manual): New appendix, include
	fdl.texi.
	(Macro and Variable Index, General Index): Move as subsections of ...
	(Indices): This new appendix.

	* doc/automake.texi: Refer to configure.ac instead of configure.in.

	* automake.texi: Move ...
	* doc/automake.texi: ... here.
	* doc/Makefile.am: New file.
	* configure.in: Output doc/Makefile.
	* Makefile.am (SUBDIRS): Add doc.
	(ETAGS_ARGS, TAGS_DEPENDENCIES): Move to doc/Makefile.am.

2003-09-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (write_aclocal): Consider files with relative
	paths as local to the project, i.e., subject to m4_include.
	* tests/subpkg.test (ACLOCAL_AMFLAGS): Make sure m4_include
	is also used for .m4 files in the outer project.

	Support for multiple inputs in AC_CONFIG_FILES.
	Requested long ago by Harlan Stenn.
	* automake.in (handle_dist): Remove unused argument $makefile.
	(handle_subdirs): Expect SUBDIRS elements in $relative_dir,
	not $am_relative_dir.
	(rewrite_inputs_into_dependencies): Allow $add_srcdir to
	be a filename that must always be prefixed by $(srcdir) or
	$(top_srcdir).
	(handle_configure, generate_makefile): Revamp to make the
	Makefile.am, Makefile.in, Makefile more independent.
	(locate_am): New function.