@@ -3879,9 +3879,13 @@ sub do_check_merge_target ()
 		    . "\n");
 }
 
+# handle_clean ($MAKEFILE)
+# ------------------------
 # Handle all 'clean' targets.
-sub handle_clean
+sub handle_clean ($)
 {
+  my ($makefile) = @_;
+
   # Clean the files listed in user variables if they exist.
   $clean_files{'$(MOSTLYCLEANFILES)'} = MOSTLY_CLEAN
     if var ('MOSTLYCLEANFILES');
@@ -3922,7 +3926,9 @@ sub handle_clean
      MOSTLYCLEAN_RMS      => join ('', @{$rms{&MOSTLY_CLEAN}}),
      CLEAN_RMS            => join ('', @{$rms{&CLEAN}}),
      DISTCLEAN_RMS        => join ('', @{$rms{&DIST_CLEAN}}),
-     MAINTAINER_CLEAN_RMS => join ('', @{$rms{&MAINTAINER_CLEAN}}));
+     MAINTAINER_CLEAN_RMS => join ('', @{$rms{&MAINTAINER_CLEAN}}),
+     MAKEFILE             => basename $makefile,
+     );
 }
 
 
@@ -6638,7 +6644,7 @@ sub generate_makefile ($$)
     }
 
   handle_install;
-  handle_clean;
+  handle_clean ($makefile);
   handle_factored_dependencies;
 
   # Comes last, because all the above procedures may have
