@@ -41,7 +41,7 @@ distclean-generic:
 ## If you change distclean here, you probably also want to change
 ## maintainer-clean below.
 distclean:
-	-rm -f Makefile
+	-rm -f %MAKEFILE%
 
 maintainer-clean-am: maintainer-clean-generic distclean-am
 maintainer-clean-generic:
@@ -53,7 +53,7 @@ maintainer-clean-generic:
 
 ## See comment for distclean.
 maintainer-clean:
-	-rm -f Makefile
+	-rm -f %MAKEFILE%
 
 .PHONY: clean mostlyclean distclean maintainer-clean \
 clean-generic mostlyclean-generic distclean-generic maintainer-clean-generic
