@@ -166,6 +166,8 @@ New in 1.7a:
   - The --no-force option now correctly checks the Makefile.in's
     dependencies before deciding not to update it.
 
+  - Do not assume that make files are called Makefile in cleaning rules.
+
 * Miscellaneous
 
   - The Automake manual is now distributed under the terms of the GNU FDL.
