@@ -1,3 +1,14 @@
+2003-09-29  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (handle_clean): Take $makefile as argument, and
+	define %MAKEFILE% while processing clean.am.
+	(generate_makefile): Pass $makefile to handle_clean.
+	* lib/am/clean.am (distclean, maintainer-clean): Erase %MAKEFILE%,
+	not Makefile.
+	* tests/gnumake.test: New file.
+	* tests/Makefile.am (TESTS): Add gnumake.test.
+	Report from Braden N. McDaniel.
+
 2003-09-26  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* doc/automake.texi (Scripts): Update the example about automake.
